# qlbmUI

./: .gitignore  README.md  run_dummy_ui.py  run_local_helper.py
apps/local-helper/: README.md  pyproject.toml
apps/local-helper/examples/: qlbm_collisionless_smoke.py
apps/local-helper/src/qlbm_ui_local_helper/: run_manager.py  server.py
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  wrangler.toml
apps/web/public/downloads/: qlbmLocalHelperInstaller.py
apps/web/src/: App.svelte  app.css  main.js
apps/web/src/lib/api/: helperClient.js
apps/web/src/lib/components/: CaseBuilderDrawer.svelte  CodeBlock.svelte  ConnectModal.svelte  ConnectView.svelte  QlbmEmbeddedViewer.svelte  ResultsEmbeddedViewer.svelte  ResultsView.svelte  RunLaunchOverlay.svelte  RunsView.svelte  SetupPreview.svelte  SetupView.svelte  SideNav.svelte  StatusBar.svelte  TopBar.svelte  VtkResultsCanvas.svelte  VtkSetupCanvas.svelte  WorkspaceHeader.svelte  WorkspaceRail.svelte
apps/web/src/lib/domain/: codeHighlight.js  connection.js  defaultCase.js  helperVersion.js  powersOfTwo.js  scriptGenerator.js
apps/web/src/lib/viewer/: README.md  caseToQlbmDoc.js  createResultsScene.js  createSetupScene.js
demo_ui/: index.html
src/qlbm_ui_local_helper/: run_manager.py  server.py
